[package]
name = "image_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { version = "0.19.0", features = ["image"] }
egui = "0.19.0"
eframe = "0.19.0"
image = { version = "0.24.4", default-features = false, features = ["png"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
nu-glob = "0.71.0"
log = "0.4.17"
